filesToCompile/YACC/y.output
   0  $accept : programa $end

   1  programa : '{' sentencias '}'
   2           | '{' '}'
   3           | '{' sentencias '}' error
   4           | '{' '}' error

   5  sentencias : sentencia sentencias
   6             | sentencia

   7  sentencia : declarativa
   8            | ejecutable
   9            | ','
  10            | error ','

  11  declarativa : tipo lista_de_variables ','
  12              | VOID IDENTIFICADOR '(' parametro ')' '{' cuerpo_de_la_funcion '}' ','
  13              | declaracion_clase ','
  14              | declaracion_objeto ','
  15              | lista_de_variables ','
  16              | VOID '(' parametro ')' '{' cuerpo_de_la_funcion '}' ','
  17              | VOID IDENTIFICADOR '(' parametro ')' '{' '}' ','

  18  declaracion_clase : CLASS IDENTIFICADOR '{' lista_atributos_y_metodos '}'
  19                    | CLASS IDENTIFICADOR
  20                    | CLASS IDENTIFICADOR '{' '}'

  21  lista_atributos_y_metodos : lista_atributos_y_metodos tipo lista_de_variables ','
  22                            | lista_atributos_y_metodos metodo
  23                            | tipo lista_de_variables ','
  24                            | metodo

  25  metodo : VOID IDENTIFICADOR '(' parametro ')' '{' cuerpo_de_la_funcion '}' ','
  26         | VOID IDENTIFICADOR '(' parametro ')' '{' '}' ','

  27  declaracion_objeto : IDENTIFICADOR lista_de_objetos

  28  lista_de_objetos : IDENTIFICADOR ';' lista_de_objetos
  29                   | IDENTIFICADOR
  30                   | IDENTIFICADOR ';'

  31  tipo : SHORT
  32       | UINT
  33       | FLOAT

  34  lista_de_variables : lista_de_variables ';' IDENTIFICADOR
  35                     | IDENTIFICADOR

  36  parametro : tipo IDENTIFICADOR
  37            |

  38  cuerpo_de_la_funcion : cuerpo_de_la_funcion_sin_return
  39                       | cuerpo_de_la_funcion_con_return

  40  cuerpo_de_la_funcion_con_return : cuerpo_de_la_funcion_sin_return RETURN ','
  41                                  | RETURN ','
  42                                  | RETURN ',' cuerpo_de_la_funcion_sin_return
  43                                  | RETURN ',' cuerpo_de_la_funcion_con_return

  44  cuerpo_de_la_funcion_sin_return : sentencia cuerpo_de_la_funcion_sin_return
  45                                  | sentencia

  46  ejecutable : asignacion
  47             | invocacion
  48             | seleccion
  49             | PRINT CADENA_CARACTERES ','
  50             | ciclo_while
  51             | acceso_objeto
  52             | PRINT ','

  53  asignacion : IDENTIFICADOR '=' expresion_aritmetica ','
  54             | IDENTIFICADOR '=' ','

  55  invocacion : IDENTIFICADOR '(' expresion_aritmetica ')' ','
  56             | IDENTIFICADOR '(' ')' ','

  57  expresion_aritmetica : expresion_aritmetica '+' termino
  58                       | expresion_aritmetica '-' termino
  59                       | expresion_aritmetica '-' '*' termino
  60                       | expresion_aritmetica '+' '*' termino
  61                       | expresion_aritmetica '-' '/' termino
  62                       | expresion_aritmetica '+' '/' termino
  63                       | termino

  64  termino : termino '*' factor
  65          | termino '/' factor
  66          | factor

  67  seleccion : IF '(' condicion ')' bloque_ejecutables ELSE bloque_ejecutables END_IF ','
  68            | IF '(' condicion ')' bloque_ejecutables bloque_ejecutables END_IF ','
  69            | IF '(' condicion ')' bloque_ejecutables ELSE bloque_ejecutables ','
  70            | IF '(' condicion ')' bloque_ejecutables END_IF ','
  71            | IF '(' condicion ')' bloque_ejecutables ','
  72            | IF '(' ')' bloque_ejecutables END_IF ','

  73  ciclo_while : WHILE '(' condicion ')' DO bloque_ejecutables ','

  74  condicion : expresion_aritmetica '>' expresion_aritmetica
  75            | expresion_aritmetica '<' expresion_aritmetica
  76            | expresion_aritmetica COMPARADOR_IGUAL_IGUAL expresion_aritmetica
  77            | expresion_aritmetica COMPARADOR_DISTINTO expresion_aritmetica
  78            | expresion_aritmetica COMPARADOR_MAYOR_IGUAL expresion_aritmetica
  79            | expresion_aritmetica COMPARADOR_MENOR_IGUAL expresion_aritmetica

  80  bloque_ejecutables : '{' sentencias_ejecutables '}'
  81                     | ejecutable
  82                     | declarativa

  83  sentencias_ejecutables : sentencias_ejecutables ejecutable
  84                         | ejecutable
  85                         | sentencias_ejecutables declarativa
  86                         | declarativa

  87  factor : IDENTIFICADOR
  88         | IDENTIFICADOR OPERADOR_SUMA_SUMA
  89         | constanteSinSigno
  90         | constanteConSigno
  91         | TOF '(' expresion_aritmetica ')'

  92  constanteSinSigno : ENTERO_SIN_SIGNO
  93                    | CADENA_CARACTERES

  94  constanteConSigno : ENTERO_CORTO
  95                    | '-' ENTERO_CORTO
  96                    | PUNTO_FLOTANTE
  97                    | '-' PUNTO_FLOTANTE
  98                    | '-'

  99  acceso_objeto : IDENTIFICADOR '.' IDENTIFICADOR '=' expresion_aritmetica ','
 100                | IDENTIFICADOR '.' IDENTIFICADOR '=' IDENTIFICADOR '.' IDENTIFICADOR ','
 101                | IDENTIFICADOR '.' IDENTIFICADOR '(' expresion_aritmetica ')' ','
 102                | IDENTIFICADOR '.' IDENTIFICADOR '(' ')' ','

state 0
	$accept : . programa $end  (0)

	'{'  shift 1
	.  error

	programa  goto 2


state 1
	programa : '{' . sentencias '}'  (1)
	programa : '{' . '}'  (2)
	programa : '{' . sentencias '}' error  (3)
	programa : '{' . '}' error  (4)

	error  shift 3
	IDENTIFICADOR  shift 4
	VOID  shift 5
	IF  shift 6
	PRINT  shift 7
	WHILE  shift 8
	SHORT  shift 9
	UINT  shift 10
	FLOAT  shift 11
	CLASS  shift 12
	'}'  shift 13
	','  shift 14
	.  error

	sentencias  goto 15
	sentencia  goto 16
	declarativa  goto 17
	ejecutable  goto 18
	tipo  goto 19
	lista_de_variables  goto 20
	declaracion_clase  goto 21
	declaracion_objeto  goto 22
	asignacion  goto 23
	invocacion  goto 24
	seleccion  goto 25
	ciclo_while  goto 26
	acceso_objeto  goto 27


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	sentencia : error . ','  (10)

	','  shift 28
	.  error


state 4
	declaracion_objeto : IDENTIFICADOR . lista_de_objetos  (27)
	lista_de_variables : IDENTIFICADOR .  (35)
	asignacion : IDENTIFICADOR . '=' expresion_aritmetica ','  (53)
	asignacion : IDENTIFICADOR . '=' ','  (54)
	invocacion : IDENTIFICADOR . '(' expresion_aritmetica ')' ','  (55)
	invocacion : IDENTIFICADOR . '(' ')' ','  (56)
	acceso_objeto : IDENTIFICADOR . '.' IDENTIFICADOR '=' expresion_aritmetica ','  (99)
	acceso_objeto : IDENTIFICADOR . '.' IDENTIFICADOR '=' IDENTIFICADOR '.' IDENTIFICADOR ','  (100)
	acceso_objeto : IDENTIFICADOR . '.' IDENTIFICADOR '(' expresion_aritmetica ')' ','  (101)
	acceso_objeto : IDENTIFICADOR . '.' IDENTIFICADOR '(' ')' ','  (102)

	IDENTIFICADOR  shift 29
	'('  shift 30
	'='  shift 31
	'.'  shift 32
	','  reduce 35
	';'  reduce 35

	lista_de_objetos  goto 33


state 5
	declarativa : VOID . IDENTIFICADOR '(' parametro ')' '{' cuerpo_de_la_funcion '}' ','  (12)
	declarativa : VOID . '(' parametro ')' '{' cuerpo_de_la_funcion '}' ','  (16)
	declarativa : VOID . IDENTIFICADOR '(' parametro ')' '{' '}' ','  (17)

	IDENTIFICADOR  shift 34
	'('  shift 35
	.  error


state 6
	seleccion : IF . '(' condicion ')' bloque_ejecutables ELSE bloque_ejecutables END_IF ','  (67)
	seleccion : IF . '(' condicion ')' bloque_ejecutables bloque_ejecutables END_IF ','  (68)
	seleccion : IF . '(' condicion ')' bloque_ejecutables ELSE bloque_ejecutables ','  (69)
	seleccion : IF . '(' condicion ')' bloque_ejecutables END_IF ','  (70)
	seleccion : IF . '(' condicion ')' bloque_ejecutables ','  (71)
	seleccion : IF . '(' ')' bloque_ejecutables END_IF ','  (72)

	'('  shift 36
	.  error


state 7
	ejecutable : PRINT . CADENA_CARACTERES ','  (49)
	ejecutable : PRINT . ','  (52)

	CADENA_CARACTERES  shift 37
	','  shift 38
	.  error


state 8
	ciclo_while : WHILE . '(' condicion ')' DO bloque_ejecutables ','  (73)

	'('  shift 39
	.  error


state 9
	tipo : SHORT .  (31)

	.  reduce 31


state 10
	tipo : UINT .  (32)

	.  reduce 32


state 11
	tipo : FLOAT .  (33)

	.  reduce 33


state 12
	declaracion_clase : CLASS . IDENTIFICADOR '{' lista_atributos_y_metodos '}'  (18)
	declaracion_clase : CLASS . IDENTIFICADOR  (19)
	declaracion_clase : CLASS . IDENTIFICADOR '{' '}'  (20)

	IDENTIFICADOR  shift 40
	.  error


state 13
	programa : '{' '}' .  (2)
	programa : '{' '}' . error  (4)

	error  shift 41
	$end  reduce 2


state 14
	sentencia : ',' .  (9)

	.  reduce 9


state 15
	programa : '{' sentencias . '}'  (1)
	programa : '{' sentencias . '}' error  (3)

	'}'  shift 42
	.  error


state 16
	sentencias : sentencia . sentencias  (5)
	sentencias : sentencia .  (6)

	error  shift 3
	IDENTIFICADOR  shift 4
	VOID  shift 5
	IF  shift 6
	PRINT  shift 7
	WHILE  shift 8
	SHORT  shift 9
	UINT  shift 10
	FLOAT  shift 11
	CLASS  shift 12
	','  shift 14
	'}'  reduce 6

	sentencias  goto 43
	sentencia  goto 16
	declarativa  goto 17
	ejecutable  goto 18
	tipo  goto 19
	lista_de_variables  goto 20
	declaracion_clase  goto 21
	declaracion_objeto  goto 22
	asignacion  goto 23
	invocacion  goto 24
	seleccion  goto 25
	ciclo_while  goto 26
	acceso_objeto  goto 27


state 17
	sentencia : declarativa .  (7)

	.  reduce 7


state 18
	sentencia : ejecutable .  (8)

	.  reduce 8


state 19
	declarativa : tipo . lista_de_variables ','  (11)

	IDENTIFICADOR  shift 44
	.  error

	lista_de_variables  goto 45


state 20
	declarativa : lista_de_variables . ','  (15)
	lista_de_variables : lista_de_variables . ';' IDENTIFICADOR  (34)

	','  shift 46
	';'  shift 47
	.  error


state 21
	declarativa : declaracion_clase . ','  (13)

	','  shift 48
	.  error


state 22
	declarativa : declaracion_objeto . ','  (14)

	','  shift 49
	.  error


state 23
	ejecutable : asignacion .  (46)

	.  reduce 46


state 24
	ejecutable : invocacion .  (47)

	.  reduce 47


state 25
	ejecutable : seleccion .  (48)

	.  reduce 48


state 26
	ejecutable : ciclo_while .  (50)

	.  reduce 50


state 27
	ejecutable : acceso_objeto .  (51)

	.  reduce 51


state 28
	sentencia : error ',' .  (10)

	.  reduce 10


state 29
	lista_de_objetos : IDENTIFICADOR . ';' lista_de_objetos  (28)
	lista_de_objetos : IDENTIFICADOR .  (29)
	lista_de_objetos : IDENTIFICADOR . ';'  (30)

	';'  shift 50
	','  reduce 29


state 30
	invocacion : IDENTIFICADOR '(' . expresion_aritmetica ')' ','  (55)
	invocacion : IDENTIFICADOR '(' . ')' ','  (56)

	IDENTIFICADOR  shift 51
	ENTERO_SIN_SIGNO  shift 52
	ENTERO_CORTO  shift 53
	PUNTO_FLOTANTE  shift 54
	CADENA_CARACTERES  shift 55
	TOF  shift 56
	')'  shift 57
	'-'  shift 58
	.  error

	expresion_aritmetica  goto 59
	termino  goto 60
	factor  goto 61
	constanteSinSigno  goto 62
	constanteConSigno  goto 63


state 31
	asignacion : IDENTIFICADOR '=' . expresion_aritmetica ','  (53)
	asignacion : IDENTIFICADOR '=' . ','  (54)

	IDENTIFICADOR  shift 51
	ENTERO_SIN_SIGNO  shift 52
	ENTERO_CORTO  shift 53
	PUNTO_FLOTANTE  shift 54
	CADENA_CARACTERES  shift 55
	TOF  shift 56
	','  shift 64
	'-'  shift 58
	.  error

	expresion_aritmetica  goto 65
	termino  goto 60
	factor  goto 61
	constanteSinSigno  goto 62
	constanteConSigno  goto 63


state 32
	acceso_objeto : IDENTIFICADOR '.' . IDENTIFICADOR '=' expresion_aritmetica ','  (99)
	acceso_objeto : IDENTIFICADOR '.' . IDENTIFICADOR '=' IDENTIFICADOR '.' IDENTIFICADOR ','  (100)
	acceso_objeto : IDENTIFICADOR '.' . IDENTIFICADOR '(' expresion_aritmetica ')' ','  (101)
	acceso_objeto : IDENTIFICADOR '.' . IDENTIFICADOR '(' ')' ','  (102)

	IDENTIFICADOR  shift 66
	.  error


state 33
	declaracion_objeto : IDENTIFICADOR lista_de_objetos .  (27)

	.  reduce 27


state 34
	declarativa : VOID IDENTIFICADOR . '(' parametro ')' '{' cuerpo_de_la_funcion '}' ','  (12)
	declarativa : VOID IDENTIFICADOR . '(' parametro ')' '{' '}' ','  (17)

	'('  shift 67
	.  error


state 35
	declarativa : VOID '(' . parametro ')' '{' cuerpo_de_la_funcion '}' ','  (16)
	parametro : .  (37)

	SHORT  shift 9
	UINT  shift 10
	FLOAT  shift 11
	')'  reduce 37

	tipo  goto 68
	parametro  goto 69


state 36
	seleccion : IF '(' . condicion ')' bloque_ejecutables ELSE bloque_ejecutables END_IF ','  (67)
	seleccion : IF '(' . condicion ')' bloque_ejecutables bloque_ejecutables END_IF ','  (68)
	seleccion : IF '(' . condicion ')' bloque_ejecutables ELSE bloque_ejecutables ','  (69)
	seleccion : IF '(' . condicion ')' bloque_ejecutables END_IF ','  (70)
	seleccion : IF '(' . condicion ')' bloque_ejecutables ','  (71)
	seleccion : IF '(' . ')' bloque_ejecutables END_IF ','  (72)

	IDENTIFICADOR  shift 51
	ENTERO_SIN_SIGNO  shift 52
	ENTERO_CORTO  shift 53
	PUNTO_FLOTANTE  shift 54
	CADENA_CARACTERES  shift 55
	TOF  shift 56
	')'  shift 70
	'-'  shift 58
	.  error

	expresion_aritmetica  goto 71
	termino  goto 60
	factor  goto 61
	condicion  goto 72
	constanteSinSigno  goto 62
	constanteConSigno  goto 63


state 37
	ejecutable : PRINT CADENA_CARACTERES . ','  (49)

	','  shift 73
	.  error


state 38
	ejecutable : PRINT ',' .  (52)

	.  reduce 52


state 39
	ciclo_while : WHILE '(' . condicion ')' DO bloque_ejecutables ','  (73)

	IDENTIFICADOR  shift 51
	ENTERO_SIN_SIGNO  shift 52
	ENTERO_CORTO  shift 53
	PUNTO_FLOTANTE  shift 54
	CADENA_CARACTERES  shift 55
	TOF  shift 56
	'-'  shift 58
	.  error

	expresion_aritmetica  goto 71
	termino  goto 60
	factor  goto 61
	condicion  goto 74
	constanteSinSigno  goto 62
	constanteConSigno  goto 63


state 40
	declaracion_clase : CLASS IDENTIFICADOR . '{' lista_atributos_y_metodos '}'  (18)
	declaracion_clase : CLASS IDENTIFICADOR .  (19)
	declaracion_clase : CLASS IDENTIFICADOR . '{' '}'  (20)

	'{'  shift 75
	','  reduce 19


state 41
	programa : '{' '}' error .  (4)

	.  reduce 4


state 42
	programa : '{' sentencias '}' .  (1)
	programa : '{' sentencias '}' . error  (3)

	error  shift 76
	$end  reduce 1


state 43
	sentencias : sentencia sentencias .  (5)

	.  reduce 5


state 44
	lista_de_variables : IDENTIFICADOR .  (35)

	.  reduce 35


state 45
	declarativa : tipo lista_de_variables . ','  (11)
	lista_de_variables : lista_de_variables . ';' IDENTIFICADOR  (34)

	','  shift 77
	';'  shift 47
	.  error


state 46
	declarativa : lista_de_variables ',' .  (15)

	.  reduce 15


state 47
	lista_de_variables : lista_de_variables ';' . IDENTIFICADOR  (34)

	IDENTIFICADOR  shift 78
	.  error


state 48
	declarativa : declaracion_clase ',' .  (13)

	.  reduce 13


state 49
	declarativa : declaracion_objeto ',' .  (14)

	.  reduce 14


state 50
	lista_de_objetos : IDENTIFICADOR ';' . lista_de_objetos  (28)
	lista_de_objetos : IDENTIFICADOR ';' .  (30)

	IDENTIFICADOR  shift 29
	','  reduce 30

	lista_de_objetos  goto 79


state 51
	factor : IDENTIFICADOR .  (87)
	factor : IDENTIFICADOR . OPERADOR_SUMA_SUMA  (88)

	OPERADOR_SUMA_SUMA  shift 80
	COMPARADOR_IGUAL_IGUAL  reduce 87
	COMPARADOR_DISTINTO  reduce 87
	COMPARADOR_MENOR_IGUAL  reduce 87
	COMPARADOR_MAYOR_IGUAL  reduce 87
	','  reduce 87
	')'  reduce 87
	'+'  reduce 87
	'-'  reduce 87
	'*'  reduce 87
	'/'  reduce 87
	'>'  reduce 87
	'<'  reduce 87


state 52
	constanteSinSigno : ENTERO_SIN_SIGNO .  (92)

	.  reduce 92


state 53
	constanteConSigno : ENTERO_CORTO .  (94)

	.  reduce 94


state 54
	constanteConSigno : PUNTO_FLOTANTE .  (96)

	.  reduce 96


state 55
	constanteSinSigno : CADENA_CARACTERES .  (93)

	.  reduce 93


state 56
	factor : TOF . '(' expresion_aritmetica ')'  (91)

	'('  shift 81
	.  error


state 57
	invocacion : IDENTIFICADOR '(' ')' . ','  (56)

	','  shift 82
	.  error


state 58
	constanteConSigno : '-' . ENTERO_CORTO  (95)
	constanteConSigno : '-' . PUNTO_FLOTANTE  (97)
	constanteConSigno : '-' .  (98)

	ENTERO_CORTO  shift 83
	PUNTO_FLOTANTE  shift 84
	COMPARADOR_IGUAL_IGUAL  reduce 98
	COMPARADOR_DISTINTO  reduce 98
	COMPARADOR_MENOR_IGUAL  reduce 98
	COMPARADOR_MAYOR_IGUAL  reduce 98
	','  reduce 98
	')'  reduce 98
	'+'  reduce 98
	'-'  reduce 98
	'*'  reduce 98
	'/'  reduce 98
	'>'  reduce 98
	'<'  reduce 98


state 59
	invocacion : IDENTIFICADOR '(' expresion_aritmetica . ')' ','  (55)
	expresion_aritmetica : expresion_aritmetica . '+' termino  (57)
	expresion_aritmetica : expresion_aritmetica . '-' termino  (58)
	expresion_aritmetica : expresion_aritmetica . '-' '*' termino  (59)
	expresion_aritmetica : expresion_aritmetica . '+' '*' termino  (60)
	expresion_aritmetica : expresion_aritmetica . '-' '/' termino  (61)
	expresion_aritmetica : expresion_aritmetica . '+' '/' termino  (62)

	')'  shift 85
	'+'  shift 86
	'-'  shift 87
	.  error


state 60
	expresion_aritmetica : termino .  (63)
	termino : termino . '*' factor  (64)
	termino : termino . '/' factor  (65)

	'*'  shift 88
	'/'  shift 89
	COMPARADOR_IGUAL_IGUAL  reduce 63
	COMPARADOR_DISTINTO  reduce 63
	COMPARADOR_MENOR_IGUAL  reduce 63
	COMPARADOR_MAYOR_IGUAL  reduce 63
	','  reduce 63
	')'  reduce 63
	'+'  reduce 63
	'-'  reduce 63
	'>'  reduce 63
	'<'  reduce 63


state 61
	termino : factor .  (66)

	.  reduce 66


state 62
	factor : constanteSinSigno .  (89)

	.  reduce 89


state 63
	factor : constanteConSigno .  (90)

	.  reduce 90


state 64
	asignacion : IDENTIFICADOR '=' ',' .  (54)

	.  reduce 54


state 65
	asignacion : IDENTIFICADOR '=' expresion_aritmetica . ','  (53)
	expresion_aritmetica : expresion_aritmetica . '+' termino  (57)
	expresion_aritmetica : expresion_aritmetica . '-' termino  (58)
	expresion_aritmetica : expresion_aritmetica . '-' '*' termino  (59)
	expresion_aritmetica : expresion_aritmetica . '+' '*' termino  (60)
	expresion_aritmetica : expresion_aritmetica . '-' '/' termino  (61)
	expresion_aritmetica : expresion_aritmetica . '+' '/' termino  (62)

	','  shift 90
	'+'  shift 86
	'-'  shift 87
	.  error


state 66
	acceso_objeto : IDENTIFICADOR '.' IDENTIFICADOR . '=' expresion_aritmetica ','  (99)
	acceso_objeto : IDENTIFICADOR '.' IDENTIFICADOR . '=' IDENTIFICADOR '.' IDENTIFICADOR ','  (100)
	acceso_objeto : IDENTIFICADOR '.' IDENTIFICADOR . '(' expresion_aritmetica ')' ','  (101)
	acceso_objeto : IDENTIFICADOR '.' IDENTIFICADOR . '(' ')' ','  (102)

	'('  shift 91
	'='  shift 92
	.  error


state 67
	declarativa : VOID IDENTIFICADOR '(' . parametro ')' '{' cuerpo_de_la_funcion '}' ','  (12)
	declarativa : VOID IDENTIFICADOR '(' . parametro ')' '{' '}' ','  (17)
	parametro : .  (37)

	SHORT  shift 9
	UINT  shift 10
	FLOAT  shift 11
	')'  reduce 37

	tipo  goto 68
	parametro  goto 93


state 68
	parametro : tipo . IDENTIFICADOR  (36)

	IDENTIFICADOR  shift 94
	.  error


state 69
	declarativa : VOID '(' parametro . ')' '{' cuerpo_de_la_funcion '}' ','  (16)

	')'  shift 95
	.  error


state 70
	seleccion : IF '(' ')' . bloque_ejecutables END_IF ','  (72)

	IDENTIFICADOR  shift 4
	VOID  shift 5
	IF  shift 6
	PRINT  shift 7
	WHILE  shift 8
	SHORT  shift 9
	UINT  shift 10
	FLOAT  shift 11
	CLASS  shift 12
	'{'  shift 96
	.  error

	declarativa  goto 97
	ejecutable  goto 98
	tipo  goto 19
	lista_de_variables  goto 20
	declaracion_clase  goto 21
	declaracion_objeto  goto 22
	asignacion  goto 23
	invocacion  goto 24
	seleccion  goto 25
	ciclo_while  goto 26
	acceso_objeto  goto 27
	bloque_ejecutables  goto 99


state 71
	expresion_aritmetica : expresion_aritmetica . '+' termino  (57)
	expresion_aritmetica : expresion_aritmetica . '-' termino  (58)
	expresion_aritmetica : expresion_aritmetica . '-' '*' termino  (59)
	expresion_aritmetica : expresion_aritmetica . '+' '*' termino  (60)
	expresion_aritmetica : expresion_aritmetica . '-' '/' termino  (61)
	expresion_aritmetica : expresion_aritmetica . '+' '/' termino  (62)
	condicion : expresion_aritmetica . '>' expresion_aritmetica  (74)
	condicion : expresion_aritmetica . '<' expresion_aritmetica  (75)
	condicion : expresion_aritmetica . COMPARADOR_IGUAL_IGUAL expresion_aritmetica  (76)
	condicion : expresion_aritmetica . COMPARADOR_DISTINTO expresion_aritmetica  (77)
	condicion : expresion_aritmetica . COMPARADOR_MAYOR_IGUAL expresion_aritmetica  (78)
	condicion : expresion_aritmetica . COMPARADOR_MENOR_IGUAL expresion_aritmetica  (79)

	COMPARADOR_IGUAL_IGUAL  shift 100
	COMPARADOR_DISTINTO  shift 101
	COMPARADOR_MENOR_IGUAL  shift 102
	COMPARADOR_MAYOR_IGUAL  shift 103
	'+'  shift 86
	'-'  shift 87
	'>'  shift 104
	'<'  shift 105
	.  error


state 72
	seleccion : IF '(' condicion . ')' bloque_ejecutables ELSE bloque_ejecutables END_IF ','  (67)
	seleccion : IF '(' condicion . ')' bloque_ejecutables bloque_ejecutables END_IF ','  (68)
	seleccion : IF '(' condicion . ')' bloque_ejecutables ELSE bloque_ejecutables ','  (69)
	seleccion : IF '(' condicion . ')' bloque_ejecutables END_IF ','  (70)
	seleccion : IF '(' condicion . ')' bloque_ejecutables ','  (71)

	')'  shift 106
	.  error


state 73
	ejecutable : PRINT CADENA_CARACTERES ',' .  (49)

	.  reduce 49


state 74
	ciclo_while : WHILE '(' condicion . ')' DO bloque_ejecutables ','  (73)

	')'  shift 107
	.  error


state 75
	declaracion_clase : CLASS IDENTIFICADOR '{' . lista_atributos_y_metodos '}'  (18)
	declaracion_clase : CLASS IDENTIFICADOR '{' . '}'  (20)

	VOID  shift 108
	SHORT  shift 9
	UINT  shift 10
	FLOAT  shift 11
	'}'  shift 109
	.  error

	tipo  goto 110
	lista_atributos_y_metodos  goto 111
	metodo  goto 112


state 76
	programa : '{' sentencias '}' error .  (3)

	.  reduce 3


state 77
	declarativa : tipo lista_de_variables ',' .  (11)

	.  reduce 11


state 78
	lista_de_variables : lista_de_variables ';' IDENTIFICADOR .  (34)

	.  reduce 34


state 79
	lista_de_objetos : IDENTIFICADOR ';' lista_de_objetos .  (28)

	.  reduce 28


state 80
	factor : IDENTIFICADOR OPERADOR_SUMA_SUMA .  (88)

	.  reduce 88


state 81
	factor : TOF '(' . expresion_aritmetica ')'  (91)

	IDENTIFICADOR  shift 51
	ENTERO_SIN_SIGNO  shift 52
	ENTERO_CORTO  shift 53
	PUNTO_FLOTANTE  shift 54
	CADENA_CARACTERES  shift 55
	TOF  shift 56
	'-'  shift 58
	.  error

	expresion_aritmetica  goto 113
	termino  goto 60
	factor  goto 61
	constanteSinSigno  goto 62
	constanteConSigno  goto 63


state 82
	invocacion : IDENTIFICADOR '(' ')' ',' .  (56)

	.  reduce 56


state 83
	constanteConSigno : '-' ENTERO_CORTO .  (95)

	.  reduce 95


state 84
	constanteConSigno : '-' PUNTO_FLOTANTE .  (97)

	.  reduce 97


state 85
	invocacion : IDENTIFICADOR '(' expresion_aritmetica ')' . ','  (55)

	','  shift 114
	.  error


state 86
	expresion_aritmetica : expresion_aritmetica '+' . termino  (57)
	expresion_aritmetica : expresion_aritmetica '+' . '*' termino  (60)
	expresion_aritmetica : expresion_aritmetica '+' . '/' termino  (62)

	IDENTIFICADOR  shift 51
	ENTERO_SIN_SIGNO  shift 52
	ENTERO_CORTO  shift 53
	PUNTO_FLOTANTE  shift 54
	CADENA_CARACTERES  shift 55
	TOF  shift 56
	'-'  shift 58
	'*'  shift 115
	'/'  shift 116
	.  error

	termino  goto 117
	factor  goto 61
	constanteSinSigno  goto 62
	constanteConSigno  goto 63


state 87
	expresion_aritmetica : expresion_aritmetica '-' . termino  (58)
	expresion_aritmetica : expresion_aritmetica '-' . '*' termino  (59)
	expresion_aritmetica : expresion_aritmetica '-' . '/' termino  (61)

	IDENTIFICADOR  shift 51
	ENTERO_SIN_SIGNO  shift 52
	ENTERO_CORTO  shift 53
	PUNTO_FLOTANTE  shift 54
	CADENA_CARACTERES  shift 55
	TOF  shift 56
	'-'  shift 58
	'*'  shift 118
	'/'  shift 119
	.  error

	termino  goto 120
	factor  goto 61
	constanteSinSigno  goto 62
	constanteConSigno  goto 63


state 88
	termino : termino '*' . factor  (64)

	IDENTIFICADOR  shift 51
	ENTERO_SIN_SIGNO  shift 52
	ENTERO_CORTO  shift 53
	PUNTO_FLOTANTE  shift 54
	CADENA_CARACTERES  shift 55
	TOF  shift 56
	'-'  shift 58
	.  error

	factor  goto 121
	constanteSinSigno  goto 62
	constanteConSigno  goto 63


state 89
	termino : termino '/' . factor  (65)

	IDENTIFICADOR  shift 51
	ENTERO_SIN_SIGNO  shift 52
	ENTERO_CORTO  shift 53
	PUNTO_FLOTANTE  shift 54
	CADENA_CARACTERES  shift 55
	TOF  shift 56
	'-'  shift 58
	.  error

	factor  goto 122
	constanteSinSigno  goto 62
	constanteConSigno  goto 63


state 90
	asignacion : IDENTIFICADOR '=' expresion_aritmetica ',' .  (53)

	.  reduce 53


state 91
	acceso_objeto : IDENTIFICADOR '.' IDENTIFICADOR '(' . expresion_aritmetica ')' ','  (101)
	acceso_objeto : IDENTIFICADOR '.' IDENTIFICADOR '(' . ')' ','  (102)

	IDENTIFICADOR  shift 51
	ENTERO_SIN_SIGNO  shift 52
	ENTERO_CORTO  shift 53
	PUNTO_FLOTANTE  shift 54
	CADENA_CARACTERES  shift 55
	TOF  shift 56
	')'  shift 123
	'-'  shift 58
	.  error

	expresion_aritmetica  goto 124
	termino  goto 60
	factor  goto 61
	constanteSinSigno  goto 62
	constanteConSigno  goto 63


state 92
	acceso_objeto : IDENTIFICADOR '.' IDENTIFICADOR '=' . expresion_aritmetica ','  (99)
	acceso_objeto : IDENTIFICADOR '.' IDENTIFICADOR '=' . IDENTIFICADOR '.' IDENTIFICADOR ','  (100)

	IDENTIFICADOR  shift 125
	ENTERO_SIN_SIGNO  shift 52
	ENTERO_CORTO  shift 53
	PUNTO_FLOTANTE  shift 54
	CADENA_CARACTERES  shift 55
	TOF  shift 56
	'-'  shift 58
	.  error

	expresion_aritmetica  goto 126
	termino  goto 60
	factor  goto 61
	constanteSinSigno  goto 62
	constanteConSigno  goto 63


state 93
	declarativa : VOID IDENTIFICADOR '(' parametro . ')' '{' cuerpo_de_la_funcion '}' ','  (12)
	declarativa : VOID IDENTIFICADOR '(' parametro . ')' '{' '}' ','  (17)

	')'  shift 127
	.  error


state 94
	parametro : tipo IDENTIFICADOR .  (36)

	.  reduce 36


state 95
	declarativa : VOID '(' parametro ')' . '{' cuerpo_de_la_funcion '}' ','  (16)

	'{'  shift 128
	.  error


state 96
	bloque_ejecutables : '{' . sentencias_ejecutables '}'  (80)

	IDENTIFICADOR  shift 4
	VOID  shift 5
	IF  shift 6
	PRINT  shift 7
	WHILE  shift 8
	SHORT  shift 9
	UINT  shift 10
	FLOAT  shift 11
	CLASS  shift 12
	.  error

	declarativa  goto 129
	ejecutable  goto 130
	tipo  goto 19
	lista_de_variables  goto 20
	declaracion_clase  goto 21
	declaracion_objeto  goto 22
	asignacion  goto 23
	invocacion  goto 24
	seleccion  goto 25
	ciclo_while  goto 26
	acceso_objeto  goto 27
	sentencias_ejecutables  goto 131


state 97
	bloque_ejecutables : declarativa .  (82)

	.  reduce 82


state 98
	bloque_ejecutables : ejecutable .  (81)

	.  reduce 81


state 99
	seleccion : IF '(' ')' bloque_ejecutables . END_IF ','  (72)

	END_IF  shift 132
	.  error


state 100
	condicion : expresion_aritmetica COMPARADOR_IGUAL_IGUAL . expresion_aritmetica  (76)

	IDENTIFICADOR  shift 51
	ENTERO_SIN_SIGNO  shift 52
	ENTERO_CORTO  shift 53
	PUNTO_FLOTANTE  shift 54
	CADENA_CARACTERES  shift 55
	TOF  shift 56
	'-'  shift 58
	.  error

	expresion_aritmetica  goto 133
	termino  goto 60
	factor  goto 61
	constanteSinSigno  goto 62
	constanteConSigno  goto 63

